--- a/SurpriseHousing.ipynb
+++ b/SurpriseHousing.ipynb
@@ -5,7 +5,7 @@
    "id": "f3619664",
    "metadata": {},
    "source": [
-    "### Surprise House Case Study"
+    "### Surprise Housing Case Study"
    ]
   },
   {
@@ -8644,7 +8644,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.3"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
